--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
     </dependency>
-	  
+	<!-- Redis Client -->
+	<dependency>
+    	<groupId>redis.clients</groupId>
+    	<artifactId>jedis</artifactId>
+    	<version>2.6.2</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+	</dependency>
   </dependencies>
 </project>
